k3s/db-deployment.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: devopshub-db-deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: devopshub-db
  template:
    metadata:
      name: devopshub-db
      labels:
        app: devopshub-db
    spec:
#      affinity:
#        nodeAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            nodeSelectorTerms:
#              - matchExpressions:
#                  - key: kubernetes.io/hostname
#                    operator: In
#                    values:
#                      - k3d-worker-1-0
      containers:
        - name: db
          image: mysql:8.4
          resources:
            requests:
              cpu: 200m
              memory: 500Mi
            limits:
              cpu: 300m
              memory: 600Mi
          volumeMounts:
            - name: devopshub-db-volume
              mountPath: /var/lib/mysql
          readinessProbe:
            exec:
             command:
               - sh
               - -c
               - 'mysqladmin -h 127.0.0.1  -u"$MYSQL_USER" -p"$MYSQL_PASSWORD" status'
               # - 'mysql -h 127.0.0.1 -u"$MYSQL_USER" -p"$MYSQL_PASSWORD" -e "SELECT 1"'
            # initialDelaySeconds: 5        
            timeoutSeconds: 5
            failureThreshold: 3
            periodSeconds: 10
          startupProbe:
            exec:
             command:
               - sh
               - -c
               - 'mysqladmin -h 127.0.0.1  -u"$MYSQL_USER" -p"$MYSQL_PASSWORD" status'
            timeoutSeconds: 5
            failureThreshold: 12
            periodSeconds: 5
      volumes:
        - name: devopshub-db-volume
          persistentVolumeClaim:
            claimName: devopshub-db-pvc
