k3s/db-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: db
spec:
  - name: devopshub-db
    image: mysql:8.4
    volumeMounts:
      - name: devopshub-db-pvc
        mountPath: /var/lib/mysql
