k3s/deployment.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: devopshub-deployment
  labels:
    deployment: devopshub
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  selector:
    matchLabels:
      app: devopshub
  template:
    metadata:
      labels:
        app: devopshub
    spec:
      terminationGracePeriodSeconds: 30
#      affinity:
#        nodeAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            nodeSelectorTerms:
#              - matchExpressions:
#                  - key: kubernetes.io/hostname
#                    operator: NotIn
#                    values:
#                      - k3d-mac-server-0
#      affinity:
#        nodeAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            nodeSelectorTerms:
#              - matchExpressions:
#                  - key: kubernetes.io/hostname
#                    operator: In
#                    values:
#                      - k3d-worker-1-0
      containers:
        - name: devopshub
          image: devopshub:v3
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          lifecycle:
            preStop:
              exec: {command: ["sleep", "5"]}
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            # initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 12
          volumeMounts:
            - name: ssh-key-volume
              mountPath: "/secrets"
              readOnly: true
      volumes:
        - name: ssh-key-volume
          secret:
            secretName: homelab-ssh-key
            defaultMode: 0400
