k3s/pod.yml
apiVersion: v1
kind: Pod
metadata:
 name: devopshub
 labels:
   app: devopshub
spec:
  containers:
    - name: devopshub-portal
      image: devopshub:v1
      ports:
        - containerPort: 8000
      volumeMounts:
        - name: devopshub-db-pvc
          mountPath: /var/lib/mysql
