k3s/svc.yml
---

apiVersion: v1
kind: Service
metadata:
  name: devopshub-svc
spec:
  type: NodePort
  #type: ClusterIP
  selector:
    app: devopshub
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30080

---

apiVersion: v1
kind: Service
metadata:
  name: devopshub-db-svc
spec:
  type: ClusterIP
  selector:
    app: devopshub-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
